--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ about:
   home: https://github.com/cta-observatory/nectarchain
   summary: Analysis chain for the CTA MSTN NectarCAM prototype
   license: BSD-3-Clause
-  license_file: licenses/LICENSE.rst
+  license_file: LICENSE.md
 
 extra:
   recipe-maintainers:
