--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,11 @@ requirements:
   run:
     - python =3
     - astropy
+    - browser-cookie3
     - ctapipe =0.19
     - ctapipe-io-nectarcam
+    - mechanize
+    - pandas
 
 test:
   imports:
