--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
   run:
     - python =3
     - astropy
-    - browser-cookie3
+    - browser_cookie3
     - ctapipe =0.19
     - ctapipe-io-nectarcam
     - mechanize
