--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - zodb
     - lmfit  # needed into TRR
     - h5py  # needed into TRR (should be removed to use I/O methods of containers)
+    - pyqt =6
     - pyqtgraph
 
 test:
