--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,10 @@ requirements:
     - python >={{ python_min }}
     - ctapipe =0.19
     - ctapipe-io-nectarcam
+    - lmfit
     - pandas
+    - pyqt5
+    - pyqtgraph
     - scipy =1.11.4
     - zeo
     - zodb
